--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="todo">
     <div class="todo-head">
         <input id ="title" type="text" placeholder="title">
         <span class="title_error">Start with a capital letter, followed by 3–8 lowercase letters</span>
@@ -23,11 +24,9 @@
         <input type="text" placeholder="Search" id="search_input">
     </div>
     <div class="elements">
-        <!--<i class="fa-solid fa-check"></i>
-        <i class="fa-solid fa-pen-to-square"></i>
-        <i class="fa-solid fa-trash"></i>-->
+        
     </div>
-
+</div>
     <script src="js/all.min.js"  data-auto-replace-svg="nest"></script>
     <script src="js/main.js"></script>
 </body>
