--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="todo">
     <div class="todo-head">
-        <input id ="title" type="text" placeholder="title">
+        <input id ="title" type="text" placeholder="Title">
         <span class="title_error">Start with a capital letter, followed by 3–8 lowercase letters</span>
-        <textarea id="description" placeholder="description"></textarea>
+        <textarea id="description" placeholder="Description"></textarea>
         <span class="description_error">Enter at least 20 characters</span>
         <div class="buttons">
             <button id="add">Add</button>
